<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/coinID_walletListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/coinID_example"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coinValue_walletListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/coinValue_example"
        app:layout_constraintStart_toStartOf="@id/coinID_walletListView"
        app:layout_constraintTop_toBottomOf="@id/coinID_walletListView" />

    <TextView
        android:id="@+id/coinCurrency_walletListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/coinCurrency_example"
        app:layout_constraintStart_toStartOf="@id/coinValue_walletListView"
        app:layout_constraintTop_toBottomOf="@id/coinValue_walletListView" />

    <ImageButton
        android:id="@+id/inBankBtn_walletListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/send_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_local_atm_black_40dp" />

</android.support.constraint.ConstraintLayout>